==> sunk1984/5804/Common/PowerPac/TCPIP/Core/mcu/IP_NI_LM3S9B90.c <==
#include "IP_Int.h"
#include "BSP.h"
#include "IP_NI_LM3S9B90.h"
#define MAC_BASE_ADDR          0x40048000
#define MACRIS                 (*(volatile U32 *)(MAC_BASE_ADDR + 0x000))  // Ethernet MAC Raw Interrupt Status (MACRIS)
#define MACIACK                (*(volatile U32 *)(MAC_BASE_ADDR + 0x000))  // Ethernet MAC Interrupt Acknowledge (MACIACK)
#define MACIM                  (*(volatile U32 *)(MAC_BASE_ADDR + 0x004))  // Ethernet MAC Interrupt Mask (MACIM)
#define MACRCTL                (*(volatile U32 *)(MAC_BASE_ADDR + 0x008))  // Ethernet MAC Receive Control (MACRCTL)
#define MACTCTL                (*(volatile U32 *)(MAC_BASE_ADDR + 0x00C))  // Ethernet MAC Data (MACDATA)
#define MACDATA                (*(volatile U32 *)(MAC_BASE_ADDR + 0x010))  // Ethernet MAC Individual Address 0 (MACIA0)
#define MACIA0                 (*(volatile U32 *)(MAC_BASE_ADDR + 0x014))  // Ethernet MAC Individual Address 1 (MACIA1)
#define MACIA1                 (*(volatile U32 *)(MAC_BASE_ADDR + 0x018))  // Ethernet MAC Threshold (MACTHR)
#define MACTHR                 (*(volatile U32 *)(MAC_BASE_ADDR + 0x01C))  // Ethernet MAC Management Control (MACMCTL)
#define MACMCTL                (*(volatile U32 *)(MAC_BASE_ADDR + 0x020))  // Ethernet MAC Management Divider (MACMDV)
#define MACMDV                 (*(volatile U32 *)(MAC_BASE_ADDR + 0x024))  // Ethernet MAC Management Address (MACMADD)

static void _PHY_WriteReg(U8  RegIndex,  U16  val) {
  U32 v;

  if (RegIndex == MII_ANAR) {
    _PhyAnar = val;
  }
  if (RegIndex == MII_BMCR) {
    _PhyBmcr = val;
  }
  MACMTXD = val;
  v = ((RegIndex << 3) | (MAC_MCTL_WRITE_BIT | MAC_MCTL_START_BIT));
  MACMCTL = v;
  while(MACMCTL & (MAC_MCTL_START_BIT)){
  };
}

static U16 _PHY_ReadReg(U8 RegIndex) {
  U32 v;

  v = (((RegIndex << 3) & 0x000000F8) | MAC_MCTL_START_BIT);
  MACMCTL = v;
  while(MACMCTL & (MAC_MCTL_START_BIT)){
  };
  return ((U16)MACMRXD);
}

static int  _SendPacket(void) {
  U32    * pPacket;
  unsigned NumBytes;
  U32      FirstWord;
  int      NumItems;

  IP_GetNextOutPacket((void*)&pPacket, &NumBytes);
  if (NumBytes == 0) {
    _TxIsBusy = 0;
    return 0;
  }
  IP_LOG((IP_MTYPE_DRIVER, "DRIVER: Sending packet: %d bytes", NumBytes));
  INC(_DriverStats.TxSendCnt);
  //
  // The first word of the Tx Fifo has the following structure:
  //  b[ 7:0 ] Data Length LSB
  //  b[15:8 ] Data Length MSB
  //  b[23:16] DA oct 1
  //  b[31:24] DA oct 2
  // The Data Length field in the first FIFO word refers to the
  // Ethernet frame data payload. NumBytes is the size of the payload + the Ethernet
  // header, so we have to substract 14 bytes.
  //
  FirstWord = ((*pPacket & 0x0000FFFF) << 16) | (NumBytes - 14);
  pPacket = (U32*)((U8*)pPacket + 2);
  //
  // Write data in the Tx FIFO
  //
  MACDATA = FirstWord;    // Write packet size into Tx FIFO
#if 1
  NumItems = (NumBytes + 3) >> 2;
  while (NumItems >= 4) {
    MACDATA = *pPacket++;
    MACDATA = *pPacket++;
    MACDATA = *pPacket++;
    MACDATA = *pPacket++;
    NumItems -= 4;
  } ;
  if (NumItems > 0) {
    do {
      MACDATA = *pPacket++;
    } while (--NumItems);
  }
#else
  while (Cnt < NumBytes) {
    MACDATA = *pPacket++;
    Cnt += 4;
  }
#endif
  MACTR |= (1 << 0);      // Initiate a transmission once the packet has been placed in the TX FIFO.
  return 0;
}

static void _ISR_Handler(void) {
  U32  ISR_Status;

  ISR_Status = MACRIS;
  //
  // Handle Rx errors
  //
  if (ISR_Status & MAC_RXER) {
    INC(_DriverStats.RxErrCnt);
  } else if (ISR_Status & MAC_FOV) {
    _ResetRxError();
  } else if (ISR_Status & MAC_RXINT) {  // Did we receive a frame ?
    INC(_DriverStats.RxIntCnt);
    MACIM  &= ~(1 << 0);  // Rx disable interrupt
    IP_OnRx();
  }

  if (ISR_Status & MAC_TXEMP) {         // Frame completly sent ?
    if (_TxIsBusy) {
      IP_RemoveOutPacket();
      INC(_DriverStats.TxIntCnt);
      _SendPacket();
    }
  }
  MACIACK    = ISR_Status; // Clears the bits in the ISR register
}

static  int  _Init(unsigned Unit) {
  int r;
  U32 MacAddrLow;
  U16 MacAddrHigh;
  //
  // Enable clocks for MAC and PHY
  //
  SYSCTL_RCGC2 |= 0
               | (1 << 30)    // EPHY0
               | (1 << 28)    // EMAC0
               ;
  //
  // Reset MAC and PHY
  //
  SYSCTL_SRCR2 |= 0
               | (1 << 30)     // EPHY0
               | (1 << 28)     // EMAC0
               ;
  BSP_ETH_Init(Unit);
  MACMDV  = 0x0A;   // Set MDIO clock divider
  MACIM   = 0;      // Disable MAC interrupts
  MACIACK = 0x7FF;  // Clear all pending interrupts
  //
  // Setup MAC Address
  //
  MacAddrLow  = (IP_aIFace[0].abHWAddr[3]  << 24)| (IP_aIFace[0].abHWAddr[2] << 16) | (IP_aIFace[0].abHWAddr[1] << 8) | IP_aIFace[0].abHWAddr[0];
  MacAddrHigh = (IP_aIFace[0].abHWAddr[5] << 8) | IP_aIFace[0].abHWAddr[4];
  MACIA0      = MacAddrLow;
  MACIA1      = MacAddrHigh;
  r = _PHY_Init(Unit);                                // Configure the PHY
  if (r) {
    return 1;  // Error
  }
  _UpdateLinkState();
  BSP_ETH_InstallISR_Ex(58, _ISR_Handler, 240);
  MACRCTL = 0;          // Disable the receiver
  MACRCTL = (1 << 4);   // Reset Rx FIFO
  //
  // Enable receiver and transmitter
  //
  MACTCTL |= 0
          | (1 << 2)   // Generate CRC
          | (1 << 1)   // Enable padding
          | (1 << 0);  // Enable Tx
  MACRCTL = 0
          | (1 << 4)   // Reset Rx FIFO
          | (1 << 3)   // Reject frames with an incorrectly calculated CRC
          | (0 << 2)   // Enable promiscious mode
          | (0 << 1)   // Enable receiption of multicast frames
          | (1 << 0)   // Enable Rx
          ;
  //
  // Enable MAC interrupts
  //
  MACIM  =  0
         | (0 << 6)    // PHY interrupt
         | (0 << 5)    // MDIO interrupt
         | (0 << 4)    // Rx error
         | (1 << 3)    // Rx overflow
         | (1 << 2)    // Tx empty interrupt
         | (0 << 1)    // Tx error interrupt
         | (1 << 0)    // Rx interrupt
         ;
  return 0;             // O.K.
}

static int _GetPacketSize(unsigned Unit) {
  int NumBytes;
  U32 NumPackets;

  NumPackets = MACNP;
  if (NumPackets != 0) {
    INC(_DriverStats.RxCnt);
    _FirstWord = MACDATA;  // Store first word since we need the 2 data bytes.
    NumBytes   = _FirstWord & 0x0000FFFF;
    if ((NumBytes >= 66) && (NumBytes < 0x600)) { // 66 bytes is the minimum packet size. 64 Ethernet packet including the FCS + 2 frame length size.
      return NumBytes - 6;  // Remove the 2 bytes frame length and the 4 bytes FCS.
    } else {
      INC(_DriverStats.RxNoPacketSize);
      _ResetRxError();
    }
  }
  return 0;
}

static int _ReadPacket(unsigned Unit, U8 *pDest, unsigned NumBytes) {
  U32 * pPacket;
  U32   Data;
  int   NumItems;

  pPacket  = (U32*)pDest;
  *pPacket = (_FirstWord >> 16);
  pPacket  = (U32*)((U32)pPacket + 2);
  if (pDest != NULL) {
    NumBytes -= 2;   // First 2 data bytes of the packet has been read before.
    NumItems  = (NumBytes + 4 + 3) >> 2;  // NumBytes is the number of bytes which we copy into the buffer. The 4 bytes are the CRC which we do not copy but have to read. 3 bytes for the alignement.
    NumItems--;     // Don't store the CRC of the Ethernet frame in the buffer. The last item will only be read.
    while (NumItems >= 4) {
      Data     = MACDATA;
      *pPacket++  = Data;
      Data     = MACDATA;
      *pPacket++  = Data;
      Data     = MACDATA;
      *pPacket++  = Data;
      Data     = MACDATA;
      *pPacket++  = Data;
      NumItems -= 4;
    }
    if (NumItems) {
      do {
        Data     = MACDATA;
        *pPacket++  = Data;
      } while (--NumItems);
    }
    Data = MACDATA; // Remove the CRC of the Ethernet frame from the Rx FIFO.
  } else {
    if (NumItems) {
      do {
        Data     = MACDATA;
      } while (--NumItems);
    }
  }
  MACIM  |= (1 << 0);  // Enable Rx Interrupt
  return 0;
}
