==> sunk1984/5804/Common/PowerPac/TCPIP/Core/mcu/IP_NI_LPC32xx.c <==
#include "IP_Int.h"
#include "BSP.h"
#include "IP_NI_LPC32xx.h"
#define NUM_RX_BUFFERS   4
#define NUM_TX_BUFFERS   4
#define RX_BUFFER_SIZE   0x600
#define TX_BUFFER_SIZE   0x600
#define SCB_BASE_ADDR       (0xE01FC000)
#define PCON                (*(volatile unsigned int*)(SCB_BASE_ADDR + 0x0C0))
#define PCONP               (*(volatile unsigned int*)(SCB_BASE_ADDR + 0x0C4)) // Power Control for Peripherals Register
#define PCONP_PCENET_MASK   (1 << 30)                                  // Ethernet block power/clock control bit.
#define PWR_CTRL            (*(volatile U32*)(0x40004044)) // Power Control for Peripherals Register
#define MAC_BASE_ADDR       (0x31060000) /* AHB Peripheral # 0 */
#define MAC_MAC1            (*(volatile U32 *)(MAC_BASE_ADDR + 0x000)) /* MAC config reg 1 */
#define MAC_MAC2            (*(volatile U32 *)(MAC_BASE_ADDR + 0x004)) /* MAC config reg 2 */
#define MAC_IPGT            (*(volatile U32 *)(MAC_BASE_ADDR + 0x008)) /* b2b InterPacketGap reg */
#define MAC_IPGR            (*(volatile U32 *)(MAC_BASE_ADDR + 0x00C)) /* non b2b InterPacketGap reg */
#define MAC_CLRT            (*(volatile U32 *)(MAC_BASE_ADDR + 0x010)) /* CoLlision window/ReTry reg */
#define MAC_MAXF            (*(volatile U32 *)(MAC_BASE_ADDR + 0x014)) /* MAXimum Frame reg */
#define MAC_SUPP            (*(volatile U32 *)(MAC_BASE_ADDR + 0x018)) /* PHY SUPPort reg */
#define MAC_TEST            (*(volatile U32 *)(MAC_BASE_ADDR + 0x01C)) /* TEST reg */

static void _PHY_WriteReg(U8  RegIndex,  U16  val) {
  if (RegIndex == MII_ANAR) {
    _PhyAnar = val;
  }
  if (RegIndex == MII_BMCR) {
    _PhyBmcr = val;
  }

  MAC_MCMD = 0;
  MAC_MADR = (_PhyAddr << 8) | (RegIndex & 0x1f);
  MAC_MWTD = val;
  //
  // Wait for completion
  //
  while (MAC_MIND & MIND_BUSY);
}

static U16 _PHY_ReadReg(U8 RegIndex) {
  MAC_MCMD = MCMD_READ;
  MAC_MADR = (_PhyAddr << 8) | (RegIndex & 0x1f);
  //
  // Wait for completion
  //
  while (MAC_MIND & (MIND_BUSY | MIND_NOT_VALID));
  MAC_MCMD = 0;                        // Clear READ command
  return ((U16)MAC_MRDD);
}

static int  _SendPacket(void) {
  void   * pPacket;
  unsigned NumBytes;
  unsigned WrPos;
  unsigned NextWr;
  TX_BUFFER_DESC  *pTxBufDesc;
  void *pBuffer;

  IP_GetNextOutPacket(&pPacket, &NumBytes);
  if (NumBytes == 0) {
    _TxIsBusy = 0;
    return 0;
  }
  IP_LOG((IP_MTYPE_DRIVER, "DRIVER: Sending packet: %d bytes", NumBytes));
  INC(_TxSendCnt);
  //
  // Copy data into Ethernet RAM
  //
  WrPos = MAC_TXPRODUCEINDEX;
  pBuffer = _pTxBuffer + WrPos * TX_BUFFER_SIZE;
  IP_MEMCPY(pBuffer, pPacket, NumBytes);
  IP_RemoveOutPacket();      // Right after memcopy, stack can forget about the packet
  //
  // Prepare descriptor
  //
  if (NumBytes < 60) {
    NumBytes = 60;       // Make sure packet is at least 64 bytes (4 bytes are CRC) so we do not rely on the hardware to pad
  }
  pTxBufDesc = _paTxBufDesc + WrPos;
  pTxBufDesc->Addr = (U32)pBuffer;
  pTxBufDesc->Ctrl = (NumBytes - 1)
                   | (1 << 26)
                   | (1 << 29)
                   | (1 << 30)
                   | (1UL << 31)
                   ;
  //
  // Start send by incrementing producer index
  //
  NextWr = MAC_TXPRODUCEINDEX + 1;
  if (NextWr >= _NumTxBuffers) {
    NextWr = 0;
  }
  MAC_TXPRODUCEINDEX = NextWr;
  return 0;
}

static void  _ISR_Handler(void) {
  U32 IntStat;

  IntStat = MAC_INTSTATUS;
  MAC_INTCLEAR = IntStat;
  //
  // Handle Rx
  //
  if (IntStat & (INT_RX_DONE | INT_RX_ERROR)) {
    INC(_RxIntCnt);
    IP_OnRx();
  }
  //
  // Handle Tx
  //
  if (IntStat & (INT_TX_DONE | INT_TX_ERROR)) {
    _OnTx();
  }
  //
  // Handle receive overrun
  //
  if (IntStat & INT_RX_OVERRUN) {
    MAC_COMMAND |= CMD_RX_RESET;
    MAC_COMMAND |= CMD_RX_ENABLE;
    MAC_MAC1 |= MAC1_RX_ENABLE;
  }
  //
  // Handle transmitter underrun
  //
  if (IntStat & INT_TX_UNDERRUN) {
    MAC_COMMAND |= CMD_TX_RESET;
    MAC_COMMAND |= CMD_TX_ENABLE;
  }
}

static  int  _Init(unsigned Unit) {
  int r;
  U32 v;
  //
  // Enable power
  //
  PCONP |= PCONP_PCENET_MASK;
  BSP_ETH_Init(Unit);
  //
  // Check MAC Id
  //
  v = MAC_MODULEID;
  if ((v & 0xFFFF0000) == 0x39020000) {
    IP_LOG((IP_MTYPE_DRIVER | IP_MTYPE_INIT, "DRIVER: MAC with Id %x found.", v));
  } else {
    IP_WARN((IP_MTYPE_DRIVER | IP_MTYPE_INIT, "DRIVER: Wrong MAC Id."));
    return 1;
  }
  //
  // Soft Reset  MAC
  //
  MAC_MAC1 = (1 << 15);

  /* perform soft reset of the controller */
  MAC_MAC1 = ( MAC1_RESET_TX |
                MAC1_RESET_MCS_TX |
                MAC1_RESET_RX |
                MAC1_RESET_MCS_RX |
                MAC1_RESET_SIM |
                MAC1_SOFT_RESET );
  /* reset host interface */
  MAC_COMMAND = ( CMD_REG_RESET |
                  CMD_TX_RESET  |
                  CMD_RX_RESET );


  MAC_MAC2 = MAC2_CRC_ENABLE | MAC2_PAD_CRC | MAC2_AUTO_DETECT;
  IP_OS_Delay(1);
  MAC_MAC1 = 0;
  IP_OS_Delay(1);
  //
  // Reset the MII Management hardware.
  //
  MAC_MCFG = MCFG_RESET_MII_MGMT;
  IP_OS_Delay(1);
  MAC_MCFG = MCFG_HCLK_DIV_28;       // Dividing by 28 allows up 70 MHz Clock speed
  if (_PhyMode) {
    MAC_COMMAND = 0;
  } else {
    MAC_COMMAND = CMD_RMII;
  }

  r = _PHY_Init(Unit);                                // Configure the PHY
  if (r) {
    return 1;
  }
  _AllocBufferDescs();
  _InitBufferDescs();
  //
  // Inform EMAC about Descriptors, status-blocks and buffers
  //

  MAC_RXDESCRIPTOR    = (U32) _paRxBufDesc;
  MAC_RXSTATUS        = (U32) _paRxBufStat;
  MAC_RXDESCRIPTORNUM = _NumRxBuffers -1;

  MAC_TXDESCRIPTOR    = (U32) _paTxBufDesc;
  MAC_TXSTATUS        = (U32) _paTxBufStat;
  MAC_TXDESCRIPTORNUM = _NumTxBuffers -1;
  //
  // Enable Rx & Tx
  //
  MAC_MAC1 |= (1 << 0);
  MAC_COMMAND |= (1 << 0)      // RxEnable
              | (1 << 1)       // TxEnable
              ;
  _UpdateLinkState();
  return 0;
}

static int _GetPacketSize(unsigned Unit) {
  U32 RdIndex;
  U32 WrIndex;
  U32 v;
  RX_BUFFER_STAT * pRxStat;

  RdIndex = MAC_RXCONSUMEINDEX;
  WrIndex = MAC_RXPRODUCEINDEX;
  while (1) {
    if (RdIndex == WrIndex) {
      break;                      // We are done, no packet
    }
    pRxStat = _paRxBufStat + RdIndex;
    v = pRxStat->Stat;
    if ((v & (RSI_CRC_ERROR | RSI_SYMBOL_ERROR | RSI_LENGTH_ERROR | RSI_ALIGN_ERROR | RSI_LAST)) == RSI_LAST) {
      v  = (v & 0x7FF) + 1; // Get packet size
      return (v - 4);       // Give packet size without the trailing 4-bytes CRC to the stack
    }
    if (v & RSI_CRC_ERROR) {
      IP_WARN((IP_MTYPE_DRIVER, "DRIVER: CRC error. Rx packet dropped."));
    }
    //
    // Increment Consume Index to discard packet
    //
    if (++RdIndex == _NumRxBuffers) {
      RdIndex = 0;
    }
    MAC_RXCONSUMEINDEX = RdIndex;
  }
  return 0;
}

static int _ReadPacket(unsigned Unit, U8 *pDest, unsigned NumBytes) {
  U32 RdIndex;
  U32 Addr;
  RX_BUFFER_DESC * pRxDesc;

  RdIndex = MAC_RXCONSUMEINDEX;
  pRxDesc = _paRxBufDesc + RdIndex;
  Addr = pRxDesc->Addr;
  IP_MEMCPY (pDest, (void*)Addr, NumBytes);
  // Increment Consume Index to discard packet
  if (++RdIndex == _NumRxBuffers) {
    RdIndex = 0;
  }
  INC(_RxCnt);
  MAC_RXCONSUMEINDEX = RdIndex;
  return 0;
}
